fix alignments of elements in the header based on the design

--- a/css/home.css
+++ b/css/home.css
@@ -13,8 +13,17 @@ header{
 /*header style*/
 #nav-title{
     float:right;
-    margin: 2px 0px 0px 10px;
+    margin: 11px 0px 0px 15px;
     letter-spacing: 1px;
+    font-size: 20px;
+}
+
+.navbar{
+    min-height: 68px;
+}
+
+#work-navbar > .nav-container{
+    margin: 0 12px;
 }
 
 nav#work-navbar a{
@@ -23,7 +32,7 @@ nav#work-navbar a{
 }
 
 .brand-logo-small {
-    height: 36px;
+    height: 43px;
 }
 
 
@@ -32,8 +41,9 @@ nav#work-navbar {
     border-color: transparent;
 }
 
-nav#work-navbar > .container > .navbar-header a > img{
+nav#work-navbar > .nav-container > .navbar-header a > img{
     top: auto;
+    margin-top: 15px;
 }
 
 .navbar-header button{
@@ -44,28 +54,36 @@ nav#work-navbar > .container > .navbar-header a > img{
     border-color: transparent;
 }
 
-nav#work-navbar > .container > .navbar-header > .navbar-brand{
+nav#work-navbar > .nav-container > .navbar-header > .navbar-brand{
     height: inherit;
     padding-top: 0;
     padding-bottom: 0;
     line-height: 55px;
 }
 
-nav#work-navbar > .container {
+nav#work-navbar > .nav-container {
     padding-top: 0;
     line-height: 59px;
     padding-bottom: 0;
 }
 
-nav#work-navbar > .container .navbar-right > ul.nav{
+nav#work-navbar > .nav-container .container .navbar-right > ul.nav{
     padding-right: 0;
+}
+
+nav#work-navbar > .nav-container .navbar-right{
+    width: 33%;
+}
+
+nav#work-navbar > .nav-container .navbar-right > ul.nav{
+    width: 100%;
 }
 
 .navbar-right > ul.nav > li{
     padding:8px;
 }
 
-nav#work-navbar > .container .navbar-right > ul.nav > li{
+nav#work-navbar > .nav-container .container .navbar-right > ul.nav > li{
     font-size: 14px;
     height: 100%;
     text-align: right;
@@ -76,16 +94,21 @@ nav#work-navbar > .container .navbar-right > ul.nav > li{
 }
 
 @media screen and (max-width: 480px) {
-    nav#work-navbar > .container .navbar-right > ul.nav > li{
+    nav#work-navbar > .nav-container .navbar-right > ul.nav > li{
         margin-top:0px;}
 
 }
 
-nav#work-navbar > .container .navbar-right > ul.nav > li > a{
+nav#work-navbar > .nav-container .navbar-right > ul.nav > li > a{
     display: inline;
     padding: 0;
     color: #fff;
+    font-size: 16px;
+    letter-spacing: 3px;
+}
 
+nav#work-navbar > .nav-container .navbar-right > ul.nav > li:not(:last-child){
+    margin-right: 65px;
 }
 
 /*cover style*/
